<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_file"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.imxqd.day_13.FileActivity">
    <EditText
        android:id="@+id/file_et"
        android:text="@string/file_text"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/btn_save"
        android:text="@string/btn_save_to_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_read"
        android:text="@string/btn_read_from_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
